Set html .container; set basic .container flex properties; set max-width for imgs

--- a/style.css
+++ b/style.css
@@ -3,3 +3,13 @@
 *::after {
     box-sizing: border-box;
 }
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+.container img {
+    max-width: 120px;
+}
